Fixed text colours to meet Triple A contrast ration requirements

--- a/css/home.css
+++ b/css/home.css
@@ -1068,8 +1068,8 @@ td:last-child li {
 }
 .statsCounter {
     display: inline-block;
-    color: #5873b0;
-    background-color: #233151;
+    color: #7a99df;
+    background-color: #141F38;
     padding: 0 0.5em 0;
     font-size: 28px;
     min-width: 263px;
